--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backend-dos",
   "version": "1.0.0",
   "description": "backend-dos",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
     "start": "node src",
